lab5-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
spec:
  finalizers:
  - kubernetes
