container2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: bb2
  name: bb2
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - echo hello;sleep 3600
    image: busybox
    name: bba
  - args:
    - /bin/sh
    - -c
    - echo hello;sleep 3600
    image: busybox
    name: bbb
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
