init-ex.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: web
  name: web
spec:
  containers:
  - image: nginx
    name: web
    ports:
    - containerPort: 80
    resources: {}
    volumeMounts:
    - name: vol
      mountPath: /usr/share/nginx/html
  dnsPolicy: ClusterFirst
  restartPolicy: Never
  volumes:
  - name: vol
    emptyDir: {}
