lab10-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: lab10-httpd
spec:
  volumes:
  - name: lab10-pv-storage
    persistentVolumeClaim:
      claimName: lab10-pv-claim
  containers:
  - image: httpd
    name: lab10-httpd
    ports:
    - containerPort: 80
      name: "http-server"
    volumeMounts:
    - mountPath: "/var/www/html"
      name: lab10-pv-storage
