lab11-secret-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: bb-secret
  name: bb-secret
spec:
  containers:
  - image: nginx 
    name: bb-secret
  restartPolicy: Always
