lab11-secretservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: secretservice
  name: secretservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secretservice
  template:
    metadata:
      labels:
        app: secretservice
    spec:
      volumes:
      - name: secret-volume
        secret:
          secretName: ss-secret
      containers:
      - image: alpine
        name: alpine
        securityContext:
          runAsUser: 1000
        command: ["sleep", "3600"]
        volumeMounts:
        - name: secret-volume
          mountPath: "/etc/users"
