lab7-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: proxy
  name: lab-nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: proxy
  strategy:
    rollingUpdate:
      maxUnavailable: 2
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
      - image: nginx:1.9
        name: nginx
