new-alpine.yaml
apiVersion: v1
kind: Pod
metadata:
  name: newalpine
  namespace: default
spec:
  containers:
  - name: alpine
    image: alpine
