ingress-sample.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: my-httpd-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: mypc.com
    http:
      paths:
      - backend:
          service:
            name: my-httpd
            port:
              number: 80
        path: /
        pathType: Prefix
